# multi-agent-rag-fastrun

./: .gitignore  README.md  docker-compose.yml  install-dependencies.sh  multi-agent-rag-curriculum.md  package-lock.json  package.json  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: nodes.py  state.py  supervisor.py
backend/app/api/: chat.py
backend/app/rag/: pipeline.py  retriever.py
backend/graphs/: multi_agent_graph.py
backend/tests/: evaluate.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
terraform/: main.tf
