[project]
name = "multi-agent-rag-backend"
version = "0.1.0"
description = "Backend for multi-agent RAG"
authors = [
    {name = "Author",email = "author@example.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "langserve (>=0.3.3,<0.4.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tavily-python (>=0.7.22,<0.8.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-aws (>=1.3.1,<2.0.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)",
    "boto3 (>=1.42.63,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pgvector (<0.4)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pypdf (>=6.7.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
